--- a/src/mindtouch.bench/mindtouch.bench.csproj
+++ b/src/mindtouch.bench/mindtouch.bench.csproj
@@ -61,6 +61,9 @@
     <NoWarn>0618</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="mindtouch.deki.util">
+      <HintPath>..\..\..\Deki\src\bin\mindtouch.deki.util.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
